# networker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  networker  pyproject.toml  todo.txt
.github/workflows/: build-release.yml
docs/: cli.md
src/: db.py  db_utils.py  exceptions.py  lib.rs  logging_conf.py  main.rs  protocol.py  settings.py  tui.rs  utils.py
src/cli/: console.py  device.py  device_port.py  inference.py  main.py  mod.rs  network.py  scan.rs
src/core/: device.py  mod.rs  network.py  packet.py
src/core/device/: device.rs
src/core/network/: detect.rs  mdns.rs  mod.rs  network.rs
src/data/: networker_base.db
src/database/: db.py  device.py  device_inference.py  device_port.py  network.py
src/models/: __init__.py  device.py  device_inference.py  device_port.py  network.py  packet.py  port.py
src/seeds/: main.py  seed_db.py
src/seeds/input/: service-names-port-numbers.csv
src/seeds/output/: ports.csv
