[package]
name = "networker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "networker"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
if-addrs = "0.15.0"
mdns-sd = "0.19.0"
ratatui = "0.30.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1.51.1", features = ["full"] }
