[project]
name = "networker"
version = "0.1.0"
description = "Local Area Network CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.11.12",
    "httpx>=0.28.1",
    "pydantic-extra-types[pendulum]>=2.10.6",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "scapy>=2.6.1",
    "speedtest-cli>=2.1.3",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "tqdm>=4.67.1",
    "typer>=0.20.1",
]

[tool.pytest.ini_options]
testpaths = [ "src/tests" ]
pythonpath = [ "." ]

[tool.ruff]
lint.select = ["I"]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
    "polars>=1.36.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
]
